white space fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -187,6 +187,10 @@
     width: 100%;
   }
 
+  .characteristics > span {
+    white-space: normal;
+  }
+
   .cta {
     margin: 0 auto;
     width: 100%;
